--- a/mhnet-site/package.json
+++ b/mhnet-site/package.json
@@ -16,6 +16,7 @@
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
     "three": "^0.176.0",
     "tsparticles": "^3.8.1"
   },
