--- a/mhnet-site/package.json
+++ b/mhnet-site/package.json
@@ -17,6 +17,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.16.0",
+    "resend": "^4.5.2",
     "three": "^0.176.0",
     "tsparticles": "^3.8.1"
   },
